# refineGenerativeShapeGMM

./: README.md  setup.cfg
examples/adp/: creating_generative_model_try1.ipynb
examples/adp/.ipynb_checkpoints/: create_min_hess_generative_model-checkpoint.ipynb
src/refineGenerativeShapeGMM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rgShapeGMM/: __init__.py~  core.py~  gmm3n.py
src/rgShapeGMM/.ipynb_checkpoints/: creating_generative_model_try1-checkpoint.ipynb
