[metadata]
name = refineGenerativeShapeGMM
version = 0.0.0
author = Gwendolyn Copland
author_email = martin.mccullagh@okstate.edu
description = Refine the generative ability of shapeGMM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mccullaghlab/refineGenerativeShapeGMM
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
project_urls =
    Documentation = https://github.com/mccullaghlab/refineGenerativeShapeGMM#readme
    Source = https://github.com/mccullaghlab/refineGenerativeShapeGMM
    Bug Tracker = https://github.com/mccullaghlab/refineGenerativeShapeGMM/issues
    Examples = https://github.com/mccullaghlab/refineGenerativeShapeGMM/tree/main/examples
keywords = mixture model, generative model, Guassian Mixture model
[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    numpy
    scipy
    torch>=2.0
    matplotlib
    shapeGMMTorch

[options.packages.find]
where = src

